--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="icon" href="favicon_.ico" class="icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Coffee Shop</title>
   </head>
   <body>
     <div class="page">
-      Testing
       <header class="header"></header>
       <main class="content">
         <section class="recipes"></section>
