--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
             <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
           </div>
-          <p class="header__paragraph">
+          <p class="header__address">
             200 Success Avenue, The Town of Triple Peaks
           </p>
         </div>
       </header>
       <main class="content">
-        <section class="recipes">
+        <section class="recipes" id="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipe__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -70,30 +70,25 @@
           <div class="recipes__videos">
             <div>
               <iframe
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=FeWU6fIedqjsgg4_"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
-              >
-              </iframe>
+                class="recipes__iframe"
+              ></iframe>
               <p class="recipes__video-caption">
                 <span>Aeropress recipe</span>~5 min
               </p>
             </div>
             <div>
               <iframe
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=HCM-yOtm-LaKAMhl"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
+                class="recipes__iframe"
               ></iframe>
               <p class="recipes__video-caption">
                 <span>French press recipe</span> ~15 min
@@ -101,11 +96,11 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="reservation" id="reservation"></section>
+        <section class="menu" id="menu"></section>
+        <section class="about" id="about"></section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer" id="footer"></footer>
     </div>
   </body>
 </html>
