--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <main class="content">
         <section class="recipes" id="recipes">
           <h2 class="recipes__title">Recipes</h2>
-          <p class="recipe__subtitle">
+          <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
@@ -100,7 +100,7 @@
         <section class="menu" id="menu"></section>
         <section class="about" id="about"></section>
       </main>
-      <footer class="footer" id="footer"></footer>
+      <footer class="footer" id="contacts"></footer>
     </div>
   </body>
 </html>
