--- a/index.html
+++ b/index.html
@@ -96,7 +96,41 @@
             </div>
           </div>
         </section>
-        <section class="reservation" id="reservation"></section>
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form action="" class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="first name" class="form__label">Name *</label>
+              <input
+                type="text"
+                class="form__input"
+                id="first name"
+                placeholder="Name Surname"
+              />
+              <label for="guests" class="form__label">Number of guests *</label>
+              <input
+                type="number"
+                min="1"
+                max="8"
+                class="form__input"
+                placeholder="1-8"
+              />
+              <label for="" class="form__label">Date &time *</label>
+              <input type="datetime-local" class="form__input" />
+              <label for="email" class="form__label">Your email *</label>
+              <input
+                type="email"
+                class="form__input"
+                placeholder="email@email.com"
+              />
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label for="checkbox" class="form__label form__label_type_checkbox">
+              <input type="checkbox" class="form__label" />
+              I agree with the terms of use
+            </label>
+          </form>
+        </section>
         <section class="menu" id="menu"></section>
         <section class="about" id="about"></section>
       </main>
