--- a/index.html
+++ b/index.html
@@ -98,13 +98,14 @@
         </section>
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Book a table</h2>
-          <form action="" class="reservation__form form">
+          <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label for="first name" class="form__label">Name *</label>
+              <label for="name" class="form__label">Name *</label>
               <input
                 type="text"
                 class="form__input"
-                id="first name"
+                id="name"
+                name="name"
                 placeholder="Name Surname"
               />
               <label for="guests" class="form__label">Number of guests *</label>
