--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
                 name="name"
                 placeholder="Name Surname"
               />
-              <label for="number of guests" class="form__label"
+              <label for="number-of-guests" class="form__label"
                 >Number of guests *</label
               >
               <input
                 type="number"
                 min="1"
                 max="8"
-                id="number of guests"
+                id="number-of-guests"
                 class="form__input"
                 placeholder="1-8"
               />
