checkbox checked state updated

--- a/index.html
+++ b/index.html
@@ -130,8 +130,16 @@
               />
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label for="checkbox" class="form__label form__label_type_checkbox">
-              <input type="checkbox" id="checkbox" class="form__label" />
+            <label
+              for="checkbox"
+              class="form__label form__label_type_checkbox form__label_type_checkbox_checked"
+            >
+              <input
+                type="checkbox"
+                id="checkbox"
+                class="form__checkbox"
+                checked
+              />
               I agree with the terms of use
             </label>
           </form>
