--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     />
     <meta name="keywords" content="html,css" />
     <meta name="author" content="Wilmarie Guzman" />
-    <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="icon" href="favicon_.ico" class="icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -144,8 +143,47 @@
             </label>
           </form>
         </section>
-        <section class="menu" id="menu"></section>
-        <section class="about" id="about"></section>
+        <section class="menu" id="menu">
+          <h2 class="menu__title">Menu</h2>
+          <p class="menu__subtitle">We brew  coffee from local roasted, Fairtrade certified beans and use biodegradable <br>cups.
+           All teas from our collection are $2/cup</br></p>
+          <ul class="menu__cards">
+            <li class="card">
+              <h3 class="card__title">Filter</h3>
+              <ul class="card__list">
+                  <li class="card__list-item"> Regular(12 oz) <span class="card__list-divider"></span>$1</li>
+                  <li class="card__list-item">Large (16 oz) <span class="card__list-divider"></span>$1.25</li>
+                  <li class="card__list-item">XL (20 oz) <span class="card__list-divider"></span>$1.5<li>
+                  <li class="card__list-item">Party-size (24 oz, decaf) <span class="card__list-divider"></span>$1.25</li>
+                  <li class="card__list-item">Iced Coffee (16 oz) <span class="card__list-divider"></span>$1.25</li>
+              </ul>
+            <li class="card">
+              <h3 class="card__title">Expresso</h3>
+              <ul class="card__list">
+                  <li class="card__list-item"> Macciatto <span class="card__list-divider"></span>$2.25</li>
+                  <li class="card__list-item">Cortado <span class="card__list-divider"></span>$2.50</li>
+                  <li class="card__list-item">Mocha <span class="card__list-divider"></span>$3</li>
+                  <li class="card__list-item">Sunrise inthe Bay Area (decaf)<span class="card__list-divider"></span>$10</li>
+                  </ul>
+
+            <li class="card">
+              <h3 class="card__title">Bake Goods</h3>
+              <ul class="card__list">
+                  <li class="card__list-item">Almond Croissant <span class="card__list-divider"></span>$2</li>
+                  <li class="card__list-item">Banana Bread <span class="card__list-divider"></span>$1.75</li>
+                  <li class="card__list-item">Key Lime Pie <span class="card__list-divider"></span>$3</li>
+                  <li class="card__list-item">Red Velvet Cake <span class="card__list-divider"></span>$3.75</li>
+                  <li class="card__list-item">Web Cookie <span class="card__list-divider"></span>$2</li>
+                  <li class="card__list-item">Fresh Bug'uette <span class="card__list-divider"></span>$.25</li>
+                      </ul>
+            </li>
+          </ul>
+        </section>
+        <section class="about" id="about">
+          <h4 class="about__title"> About the coffee shop</h4>
+          <p class="about__content"></p>
+
+        </section>
       </main>
       <footer class="footer" id="contacts"></footer>
     </div>
