--- a/index.html
+++ b/index.html
@@ -145,47 +145,136 @@
         </section>
         <section class="menu" id="menu">
           <h2 class="menu__title">Menu</h2>
-          <p class="menu__subtitle">We brew  coffee from local roasted, Fairtrade certified beans and use biodegradable <br>cups.
-           All teas from our collection are $2/cup</br></p>
+          <p class="menu__subtitle">
+            We brew coffee from local roasted, Fairtrade certified beans and use
+            biodegradable<br>cups. All teas from our collection are $2/cup</br>
+          </p>
           <ul class="menu__cards">
             <li class="card">
               <h3 class="card__title">Filter</h3>
               <ul class="card__list">
-                  <li class="card__list-item"> Regular(12 oz) <span class="card__list-divider"></span>$1</li>
-                  <li class="card__list-item">Large (16 oz) <span class="card__list-divider"></span>$1.25</li>
-                  <li class="card__list-item">XL (20 oz) <span class="card__list-divider"></span>$1.5<li>
-                  <li class="card__list-item">Party-size (24 oz, decaf) <span class="card__list-divider"></span>$1.25</li>
-                  <li class="card__list-item">Iced Coffee (16 oz) <span class="card__list-divider"></span>$1.25</li>
+                <li class="card__list-item">
+                  Regular(12 oz) <span class="card__list-divider"></span>$1
+                </li>
+                <li class="card__list-item">
+                  Large (16 oz) <span class="card__list-divider"></span>$1.25
+                </li>
+                <li class="card__list-item">
+                  XL (20 oz) <span class="card__list-divider"></span>$1.5
+                </li>
+                <li></li>
+                <li class="card__list-item">
+                  Party-size (24 oz, decaf)
+                  <span class="card__list-divider"></span>$1.25
+                </li>
+                <li class="card__list-item">
+                  Iced Coffee (16 oz)
+                  <span class="card__list-divider"></span>$1.25
+                </li>
               </ul>
+            </li>
+
             <li class="card">
               <h3 class="card__title">Expresso</h3>
               <ul class="card__list">
-                  <li class="card__list-item"> Macciatto <span class="card__list-divider"></span>$2.25</li>
-                  <li class="card__list-item">Cortado <span class="card__list-divider"></span>$2.50</li>
-                  <li class="card__list-item">Mocha <span class="card__list-divider"></span>$3</li>
-                  <li class="card__list-item">Sunrise inthe Bay Area (decaf)<span class="card__list-divider"></span>$10</li>
-                  </ul>
+                <li class="card__list-item">
+                  Macciatto <span class="card__list-divider"></span>$2.25
+                </li>
+                <li class="card__list-item">
+                  Cortado <span class="card__list-divider"></span>$2.50
+                </li>
+                <li class="card__list-item">
+                  Mocha <span class="card__list-divider"></span>$3
+                </li>
+                <li class="card__list-item">
+                  Sunrise inthe Bay Area (decaf)<span
+                    class="card__list-divider"
+                  ></span
+                  >$10
+                </li>
+              </ul>
+            </li>
 
             <li class="card">
               <h3 class="card__title">Bake Goods</h3>
               <ul class="card__list">
-                  <li class="card__list-item">Almond Croissant <span class="card__list-divider"></span>$2</li>
-                  <li class="card__list-item">Banana Bread <span class="card__list-divider"></span>$1.75</li>
-                  <li class="card__list-item">Key Lime Pie <span class="card__list-divider"></span>$3</li>
-                  <li class="card__list-item">Red Velvet Cake <span class="card__list-divider"></span>$3.75</li>
-                  <li class="card__list-item">Web Cookie <span class="card__list-divider"></span>$2</li>
-                  <li class="card__list-item">Fresh Bug'uette <span class="card__list-divider"></span>$.25</li>
-                      </ul>
+                <li class="card__list-item">
+                  Almond Croissant <span class="card__list-divider"></span>$2
+                </li>
+                <li class="card__list-item">
+                  Banana Bread <span class="card__list-divider"></span>$1.75
+                </li>
+                <li class="card__list-item">
+                  Key Lime Pie <span class="card__list-divider"></span>$3
+                </li>
+                <li class="card__list-item">
+                  Red Velvet Cake <span class="card__list-divider"></span>$3.75
+                </li>
+                <li class="card__list-item">
+                  Web Cookie <span class="card__list-divider"></span>$2
+                </li>
+                <li class="card__list-item">
+                  Fresh Bug'uette <span class="card__list-divider"></span>$.25
+                </li>
+              </ul>
             </li>
           </ul>
         </section>
         <section class="about" id="about">
-          <h4 class="about__title"> About the coffee shop</h4>
-          <p class="about__content"></p>
-
+          <h4 class="about__title">About the coffee shop</h4>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+          <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer" id="contacts"></footer>
+      <footer class="footer" id="contacts">
+        <div class="footer__content">
+          <div class="footer__logo">
+            <img
+              src="images\instagram_white.svg"
+              alt="logo__white"
+              class="footer__logo"
+            />
+          </div>
+          <div class="footer__social-heading footer__social-heading_social">
+            Social media
+            <ul class="footer__list">
+              <h3 class="footer__list-item"></h3>
+              <li class="footer__social-icon">
+                <a href="#" class="footer__social-link">
+                  <img
+                    src="images\facebook_white.svg"
+                    alt="Facebook"
+                    class__social-icon
+                  />Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__social__link">
+                  <img
+                    src="images\instagram_white.svg"
+                    alt="Instagram"
+                    class="footer__social-icon"
+                  />Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">©2023 Wilmarie Guzman</p>
+      </footer>
     </div>
   </body>
 </html>
