--- a/index.html
+++ b/index.html
@@ -237,13 +237,14 @@
             </p>
           </div>
           <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
       <footer class="footer" id="contacts">
         <div class="footer__content">
           <div class="footer__logo">
             <img
-              src="images\instagram_white.svg"
+              src="images\logo_coffeeshop_light.svg"
               alt="logo__white"
               class="footer__logo"
             />
@@ -258,7 +259,7 @@
                     src="images\facebook_white.svg"
                     alt="Facebook"
                     class__social-icon
-                  />Facebook
+                  /> Facebook
                 </a>
               </li>
               <li class="footer__list-item">
@@ -267,12 +268,13 @@
                     src="images\instagram_white.svg"
                     alt="Instagram"
                     class="footer__social-icon"
-                  />Instagram
+                  /> Instagram
                 </a>
               </li>
             </ul>
           </div>
         </div>
+
         <p class="footer__copyright">©2023 Wilmarie Guzman</p>
       </footer>
     </div>
