form/card.css added and revision made as per project feedback

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="html,css" />
     <meta name="author" content="Wilmarie Guzman" />
     <link rel="stylesheet" href="pages/index.css" />
-    <link rel="icon" href="favicon_.ico" class="icon" />
+    <link rel="icon" href="./favicon.ico" class="icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -129,10 +129,7 @@
               />
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label
-              for="checkbox"
-              class="form__label form__label_type_checkbox form__label_type_checkbox_checked"
-            >
+            <label for="checkbox" class="form__checkbox form__checkbox_checked">
               <input
                 type="checkbox"
                 id="checkbox"
@@ -147,7 +144,7 @@
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle">
             We brew coffee from local roasted, Fairtrade certified beans and use
-            biodegradable<br>cups. All teas from our collection are $2/cup</br>
+            biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <ul class="menu__cards">
             <li class="card">
@@ -249,26 +246,28 @@
               class="footer__logo"
             />
           </div>
-          <div class="footer__social-heading footer__social-heading_social">
+          <div class="footer__column">
             Social media
+            <h3 class="footer__social-heading"></h3>
             <ul class="footer__list">
-              <h3 class="footer__list-item"></h3>
-              <li class="footer__social-icon">
+              <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
                   <img
-                    src="images\facebook_white.svg"
+                    src="./images/facebook_white.svg"
                     alt="Facebook"
-                    class__social-icon
-                  /> Facebook
+                    class="footer__social-icon"
+                  />
+                  Facebook
                 </a>
               </li>
               <li class="footer__list-item">
-                <a href="#" class="footer__social__link">
+                <a href="#" class="footer__social-link">
                   <img
-                    src="images\instagram_white.svg"
+                    src="./images/instagram_white.svg"
                     alt="Instagram"
                     class="footer__social-icon"
-                  /> Instagram
+                  />
+                  Instagram
                 </a>
               </li>
             </ul>
