--- a/index.html
+++ b/index.html
@@ -239,7 +239,6 @@
       </main>
       <footer class="footer" id="contacts">
         <div class="footer__content">
-          <div class="footer__logo">
             <img
               src="images\logo_coffeeshop_light.svg"
               alt="logo__white"
@@ -247,8 +246,7 @@
             />
           </div>
           <div class="footer__column">
-            Social media
-            <h3 class="footer__social-heading"></h3>
+            <h3 class="footer__social-heading">Social media</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
@@ -273,7 +271,6 @@
             </ul>
           </div>
         </div>
-
         <p class="footer__copyright">©2023 Wilmarie Guzman</p>
       </footer>
     </div>
