nav links updated

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             alt="Coffeeshop-logo"
             class="nav__logo"
           />
-          <ul class="nav__links">
+          <ul class="nav__link">
             <li><a href="#recipes" class="nav__link">Recipes</a></li>
             <li><a href="#reservation" class="nav__link">Book a table</a></li>
             <li><a href="#menu" class="nav__link">Menu</a></li>
-            <li><a href="#contacts" class="nav__link">Contacts</a></li>
+            <li><a href="#about" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
         <h1 class="header__title">
@@ -238,13 +238,14 @@
         </section>
       </main>
       <footer class="footer" id="contacts">
-            <img
-              src="images\logo_coffeeshop_light.svg"
-              alt="logo__white"
-              class="footer__logo"
-            />
-          <div class="footer__column">
-            <h3 class="footer__social-heading">Social media</h3>
+        <div class="footer__column">
+          <img
+            src="images\logo_coffeeshop_light.svg"
+            alt="logo__white"
+            class="footer__logo"
+          />
+          <h3 class="footer__social-heading">
+            Social media
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
@@ -267,9 +268,9 @@
                 </a>
               </li>
             </ul>
-          </div>
-          <p class="footer__copyright">©2023 Wilmarie Guzman</p>
+          </h3>
         </div>
+        <p class="footer__copyright">©2023 Wilmarie Guzman</p>
       </footer>
     </div>
   </body>
