--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               />
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label for="checkbox" class="form__checkbox form__checkbox_checked">
+            <label for="checkbox" class="form__checkbox form__checkbox:checked">
               <input
                 type="checkbox"
                 id="checkbox"
