--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
               />
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label for="checkbox" class="form__checkbox form__checkbox:checked">
+            <label
+              for="checkbox"
+              class="form__checkbox form__label form__label_type_checkbox"
+            >
               <input
                 type="checkbox"
                 id="checkbox"
